# hoot_remake

./: .gitignore  CMakeLists.txt  hoot-overrides.xml
hootsrc20011006/: 00README.txt  MainFrm.cpp  MainFrm.h  StdAfx.cpp  StdAfx.h  drivers.xsl  hoot.cpp  hoot.css  hoot.dsp  hoot.h  hoot.ini  hoot.rc  hoot.txt  hoot.xml  hoot.xsl  hootjpn.rc  resource.h  resource_jp.h  ssBindConfig.cpp  ssBindConfig.h  ssConfig.cpp  ssConfig.h  ssConfigLoader.cpp  ssConfigLoader.h  ssDisplay.cpp  ssDisplay.h  ssDriverBinder.cpp  ssDriverBinder.h  ssDriverConfig.cpp  ssDriverConfig.h  ssDriverDescription.h  ssDriverRegister.cpp  ssDriverRegister.h  ssDriverUI.cpp  ssDriverUI.h  ssFft.cpp  ssFft.h  ssFile.cpp  ssFile.h  ssFolder.cpp  (+19 more)
hootsrc20011006/codeguru/: HyperLink.cpp
hootsrc20011006/drivers/: angelus.cpp  ds4.cpp  ed2.cpp  firehawk.cpp  hes.cpp  kss.cpp  midgarts.cpp  mistyblue.cpp  mucom2608.cpp  mucom88.cpp  mucomx1.cpp  mxdrv.cpp  revolter.cpp  scc.cpp  scheme.cpp  silpheed.cpp  snatcher.cpp  starcruiser.cpp  starship.cpp  tnmbox.cpp  trpscr.cpp  x68k.cpp  xtalsoft.cpp  zavas.cpp
hootsrc20011006/japanese/: japanese.dsp
hootsrc20011006/m88/: opna.cpp.diff
hootsrc20011006/mame/cpu/: cpuintrf.c  cpuintrf.h  h6280.h  m6800.h  m68000.h  m6809.h  memory.h  osd_cpu.h  state.h
hootsrc20011006/mame/sound/: driver.h  fakemame.cpp
hootsrc20011006/res/: hoot.rc2  pointer.cur
hootsrc20011006/sound/: ss005289.cpp  ss005289.h  ss007232.cpp  ss007232.h  ss051649.cpp  ss051649.h  ss053260.cpp  ss053260.h  ss054539.cpp  ss054539.h  ssADPCM.cpp  ssADPCM.h  ssAY8910.cpp  ssAY8910.h  ssC140.cpp  ssC140.h  ssC30.cpp  ssC30.h  ssFMTimer.cpp  ssFMTimer.h  ssMSM6258V.cpp  ssMSM6258V.h  ssMSM6295.cpp  ssMSM6295.h  ssMemoryDump.cpp  ssMemoryDump.h  ssMono2151.cpp  ssMono2151.h  ssPCEPSG.cpp  ssPCEPSG.h  ssPCM8.cpp  ssPCM8.h  ssQSound.cpp  ssQSound.h  ssSEGAPCM.cpp  ssSEGAPCM.h  ssSEGAPCM2.cpp  ssSEGAPCM2.h  ssSN76496.cpp  ssSN76496.h  (+18 more)
md/: FIRST_TARGET.md  LICENSES.md  PACK_INVENTORY.md  README.md  SOURCE_INVENTORY.md  hoot-overrides.md  hoot_headless_port_plan.md  next_steps.md
packs/: README.md
src/config/: hoot_catalog.cpp  hoot_catalog.h  hoot_xml_loader.cpp  hoot_xml_loader.h
src/core/: hoot_api.h  hoot_context.cpp  hoot_context.h  hoot_errors.h  hoot_track_info.h
src/cpu/: kmz80_cpu.cpp  kmz80_cpu.h  v30_cpu.cpp  v30_cpu.h  x86_cpu.cpp  x86_cpu.h
src/drivers/: hoot_driver.h  microcabin_pc88_driver.cpp  microcabin_pc88_driver.h  microcabin_pc98dos_driver.cpp  microcabin_pc98dos_driver.h  pc98_dos_driver.cpp  pc98_dos_driver.h  x68k_generic_driver.cpp  x68k_generic_driver.h
src/io/: asset_provider.h  d88_image.cpp  d88_image.h  filesystem_asset_provider.cpp  filesystem_asset_provider.h  memory_asset_provider.cpp  memory_asset_provider.h  zip_archive.cpp  zip_archive.h
src/sound/: libvgm_okim6258.cpp  libvgm_okim6258.h  libvgm_ym2151.cpp  libvgm_ym2151.h  libvgm_ym2203.cpp  libvgm_ym2203.h  libvgm_ym2608.cpp  libvgm_ym2608.h
tools/: xak_mml_extract.md  xak_mml_extract.py
tools/hoot2wav/: main.cpp  wav_writer.cpp  wav_writer.h
tools/hootplay/: main.cpp
tools/pc98/: disasm_export.py  driver_indexer.py  signature_scan.py  trace_compact.py
